global_stylesheet.css
body {
    /* TODO: Change font */
    font-family: Arial, Helvetica, sans-serif;
    padding: 0px;
    margin: 0px;
}

.header {
    overflow: hidden;
    background-color: rgba(16, 52, 66, 0.856);
    padding: 20px 10px;

    border-radius: 15px;
    padding: 30px;
    margin: 15px auto -20px auto;
    position: fixed; 
    top: 0;
    left: 10px;
    right: 10px;
    backdrop-filter: blur(25px);
}

.navbar-link {
    float: left;
    color: rgb(253, 253, 253);
    text-align: center;
    padding: 15px 25px;
    font-size: 15px;

    /* buttons shape */
    border-style: hidden;
    border-width: 10px;
    border-radius: 50% / 100%;

    margin-left: 10px;
    margin-right: 10px;
    margin-top: 7px;
    text-decoration: none; /*to remove underline for link*/
}

.navbar-link:hover {
    background-color: rgba(80, 155, 226, 0.363);
}

#blue-background {
    background-color: rgb(34, 138, 241);
    color: white;
    box-shadow: 0px 0px 20px rgba(114, 114, 114, 0.678);
}

.nav-links {
    float: right;
}

.header-left {
    float: left;
}

.my_icon {
    width: 60px;
    /* background-color: white; */
}

.header_title {
    font-weight: bold;
    font-size: 25px;
    float: right;
    margin-top: 17px;
    margin-left: 10px;
    margin-left: 20px;
    color: white;
}

footer {
    height: 200px;
    background: linear-gradient(to right, #8E0CFF, #FF4600);
}

#BarelySmoothTextInFooter {
    font-size: 55px;
    padding-top: 70px;
    padding-left: 100px;
    color: white;
    text-decoration: none;
    float:left;
}

#FooterSideLinks {
    font-size: 40px;
    float:right;
    padding-top: 50px;
    padding-right: 120px;
    color: white;
    text-decoration: none;
}

#ScratchTextInFooterDiv {
    padding-bottom: 20px;
}

#ScratchTextInFooterAnchor {
    text-decoration: none;
    color: white;
}

#GitHubTextInFooterAnchor {
    text-decoration: none;
    color: white;
}

a {
    font-weight: bold;
    text-decoration: none;
    color: #388eff;
}

@media (max-width: 600px) {
    footer {
        height: 200px;
        background: linear-gradient(to right, #8E0CFF, #FF4600);
        display: flex;
        flex-direction: column;
    }

    #BarelySmoothTextInFooter {
        font-size: 25px;
        padding-top: 40px;
        padding-left: 20px !important;
        color: white;
        text-decoration: none;
    }

    #FooterSideLinks {
        font-size: 20px;
        padding-top: 20px;
        padding-left: 20px;
        color: white;
        text-decoration: none;
    }

    #ScratchTextInFooterDiv {
        padding-bottom: 10px;
    }
}

@media (max-width: 768px) {
    #FooterSideLinks {
        padding-right: 50px;
    }

    #BarelySmoothTextInFooter {
        padding-left: 40px;
    }
}



/* Scrollbar */
::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background-color: #ececec;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: #b8b8b8;
    padding-left: 2px;
}

/* Dark Theme */
@media (prefers-color-scheme: dark) {
    body {
        background-color: #3a3a3a;
        color: #ffffff;
    }

    img {
        filter: brightness(0.85);
    }

    .header {
        background-color: rgb(44, 79, 173);
    }
}

/* For IE only - https://stackoverflow.com/a/43529012 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    body{
        /* background: linear-gradient(to bottom, #9fd5ff, #8e38ff); */
        background: linear-gradient(to bottom, #2f81c0, #a02cd6);
    }

    .header {
        border-radius: 15px;
        padding: 30px;
        margin: 15px auto -20px auto;
        position: fixed; 
        top: 0;
        left: 10px;
        right: 10px;
        /* width: 93%; */
        background-color: rgba(16, 52, 66, 0.973);
    }

    h3 {
        color:white;
    }

    footer {
        border: 2.5px solid #ffc58f;
        border-radius: 20px 20px 0px 0px;
        box-shadow: 0px 0px 20px 10px rgba(166, 70, 255, 0.719)
    }

    #IEnotice {
        display: none;
    }
}

